tests/NormalTests/paczka1/fuzzy1/50760451.err
Error in line 3: A105 A874 20,4
Error in line 4: g8jb8j S287 10,7
Error in line 7: A105 S287 83,2
Error in line 12: oDu03EKB S963 98,4
Error in line 5: xINm S963 98,4
Error in line 18: A105 A105 71,0
Error in line 22: McZksvdX0U S963 9,7
Error in line 25: McZksvdX0U S287 87,3
Error in line 28: 0oxNVL S963 34,7
